--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,7 +6,20 @@ title = "Neurodiverse Kris"
 [params.sidebar]
   subtitle = "Blog about mental health and everyday life of a neurodiverse techie."
   emoji = "😺"
-  avatar.src = "img/avatar.jpg"
+  avatar.src = "img/avatar.png"
+
+[params.colorscheme]
+  toggle = false
+  default = "dark"
+
+[params.footer]
+  since = 2024
+
+[widgets]
+[[widget.homepage]]
+  type = "archives"
+[[widget.homepage]]
+  type = "search"
 
 [[module.imports]]
 path = "github.com/CaiJimmy/hugo-theme-stack/v3"
